[package]
name = "midenc-harness-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true
# path = "src/lib.rs"
# crate-type = ["cdylib"]


[dependencies]
syn = { version = "2.0", features = [
    "full",
    "parsing",
    "derive",
    "extra-traits",
    "printing",
] }
quote = "1.0"


