[package]
name = "midenc-harness-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true
# path = "src/lib.rs"
# crate-type = ["cdylib"]


[dependencies]
syn = { version = "2.0", features = [
    "full",
    "parsing",
    "derive",
    "extra-traits",
    "printing",
] }
miden-test-harness    = { path = "../test-lib"    }

quote = "1.0"
libtest-mimic = "0.8.1"
inventory = "0.3.21"
