[package]
name = "miden-harness-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true


[dependencies]
# Miden dependencies
miden-harness-lib     = { path = "../test-lib"    }

# External dependencies
syn = { version = "2.0", features = [
    "full",
    "parsing",
    "derive",
    "extra-traits",
    "printing",
] }
quote = "1.0"
