[package]
name = "miden-test-use-case"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
libtest-mimic = "0.8.1"

[dependencies]
midenc-harness-macros = { path = "../test-macros" }
miden-test-harness    = { path = "../test-lib"    }
libtest-mimic = "0.8.1"
inventory = "0.3.21"

[[test]]
harness = false
name = "foo"
